# benchmarks

./: .env.example  .gitignore  Makefile  README  README.md  declaration.d.ts  docker-compose.yml  eslint.config.ts  index.ts  package-lock.json  package.json  prettier.config.cjs  tsconfig.json  type.ts
csv_results/: benchmark_node_20250410_181157.csv  benchmark_node_20250410_182924.csv  benchmark_node_20250410_183401.csv  benchmark_results_20250410_181157.csv  benchmark_results_20250410_183401.csv  benchmark_rust_20250410_183144.csv  benchmark_rust_20250410_183401.csv  summary.csv
demo/: package.json  tsconfig.json
docker/: docker-compose.yml  go.Dockerfile  node-entrypoint.sh  node.Dockerfile  rust.Dockerfile  wrk-entrypoint.sh  wrk.Dockerfile
go/: Dockerfile  docker-entrypoint.sh  go.mod  go.sum  main.go
golang/: .env.example  go.mod  main.go
md/: graphql.md  graphql1-en.md  graphql1.md  graphql2-en.md  graphql2.md  graphql3-en.md  graphql3.md
node/: .env.example  Dockerfile  codegen.ts  docker-entrypoint.sh  graphql.schema.json  index.ts  package-lock.json  package.json  tsconfig.json
rust/: .env  .env.example  Cargo.toml  Dockerfile  docker-entrypoint.sh
rust/src/: db.rs  loaders.rs  main.rs
rust/src/handlers/: mod.rs  user_handler.rs
rust/src/model/: mod.rs  post.rs  user.rs
rust/src/models/: mod.rs  user.rs
rust/src/rest/: mod.rs  user.rs
scripts/: benchmark.csv  benchmark_all.sh  benchmark_node.csv  benchmark_node.sh  benchmark_rust.csv  benchmark_rust.sh  graphql_benchmark.lua  run_wrk.sh  run_wrk_graphql.sh  run_wrk_restful.sh  start_server.sh  stats.lua  summarize_csv.sh  summary_chart.html  watch_benchmark.sh
test_node/: package-lock.json  package.json  tsconfig.json
test_rust/: Cargo.toml
test_rust/src/: api.rs  cli.rs  main.rs  mains.rs  websocket.rs
ui/: package-lock.json  package.json  (+2 more)
(+112 files in other folders)
