[package]
name = "rust"
version = "0.1.0"
edition = "2024"


[dependencies]
dotenvy = "0.15.7"
actix-web = "4"
async-graphql-actix-web = "7.0.16"
async-graphql = "7.0.16"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono"] }
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
