[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-graphql = { version = "7.0.16", features = ["dataloader"] }
async-graphql-axum = { version = "7.0.16", default-features = false }
axum = { version = "0.8.4", default-features = false, features = ["default", "http2", "tokio", "multipart"] }
chrono = "0.4.41"
num_cpus = "1.16.0"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.44.2", features = ["full"] }
