[package]
name = "test_rust"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-rt = "2"
warp = "0.3"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "runtime-tokio", "postgres", "chrono"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15.7"
